force-app/main/default/objects/Asset__c/fields/Add_On_To__c.field-meta.xml
<CustomField>
    <fullName>Add_On_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Asset record this asset is an Add-On to</inlineHelpText>
    <label>Add-On To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Add-On Assets</relationshipLabel>
    <relationshipName>AddOn_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>