force-app/main/default/objects/Asset__c/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <inlineHelpText>If perpetual license, ARR = Mainatenance amount. If subscription license, ARR = sales price.</inlineHelpText>
    <label>Annual Recurring Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>