force-app/main/default/objects/Asset__c/fields/Asset_ARR_at_Decommission__c.field-meta.xml
<CustomField>
    <fullName>Asset_ARR_at_Decommission__c</fullName>
    <label>Asset ARR at Decommission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>