force-app/main/default/objects/Asset__c/fields/Asset_Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Asset_Term_Start_Date__c</fullName>
    <label>Asset Term Start Date</label>
    <type>Date</type>
</CustomField>