force-app/main/default/objects/Asset__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <formula>Account__r.BillingStreet &amp; &quot;, &quot; &amp; Account__r.BillingCity &amp; &quot;, &quot; &amp; Account__r.BillingState &amp; &quot;, &quot; &amp; Account__r.BillingPostalCode &amp; &quot;, &quot; &amp; Account__r.BillingCountry</formula>
    <label>Bill To</label>
    <type>Text</type>
</CustomField>