force-app/main/default/objects/Asset__c/fields/Billable_Amount_Per_Period__c.field-meta.xml
<CustomField>
    <fullName>Billable_Amount_Per_Period__c</fullName>
    <formula>CASE(Billing_Frequency__c,&quot;Monthly&quot;, ARR__c /12,&quot;Quarterly&quot;,ARR__c/4,&quot;Semi-Annual&quot;,ARR__c/2, &quot;Annual&quot;,ARR__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billable Amount Per Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>