force-app/main/default/objects/Asset__c/fields/Billing_Detail_id__c.field-meta.xml
<CustomField>
    <fullName>Billing_Detail_id__c</fullName>
    <externalId>true</externalId>
    <label>Billing_Detail_id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>