force-app/main/default/objects/Asset__c/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Once</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>