force-app/main/default/objects/Asset__c/fields/Bundle_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Allocation__c</fullName>
    <label>Bundle Allocation</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>