force-app/main/default/objects/Asset__c/fields/Bundle_Product__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For Assets that are components of a SKU&apos;d bundle, this point to the bundle&apos;s product record. When the CPQ tool reads in an account&apos;s existing assets, it will convert assets referring to a SKU&apos;d bundle back into that bundle product so the bundle can be renewed/extended/decommissioned as a single product.</description>
    <label>Bundle Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Bundled Assets</relationshipLabel>
    <relationshipName>Bundled_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>