force-app/main/default/objects/Asset__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <formula>TEXT(Product__r.Business_Unit__c)</formula>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>