force-app/main/default/objects/Asset__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Not Live</fullName>
            </value>
            <value>
                <fullName>Consolidated</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>