force-app/main/default/objects/Asset__c/fields/CapPercent__c.field-meta.xml
<CustomField>
    <fullName>CapPercent__c</fullName>
    <label>Cap %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>