force-app/main/default/objects/Asset__c/fields/Component_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Component_Allocation__c</fullName>
    <label>Component Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>