force-app/main/default/objects/Asset__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contracted Assets</relationshipLabel>
    <relationshipName>Contracted_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>