force-app/main/default/objects/Asset__c/fields/Contract_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Record_Type__c</fullName>
    <description>This field was created for the Informatica Cloud integration for &quot;Contract ARR Report&quot; object</description>
    <formula>Contract__r.Record_Type__c</formula>
    <label>Contract Record Type</label>
    <type>Text</type>
</CustomField>