force-app/main/default/objects/Asset__c/fields/Contract_Term_in_Years__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_in_Years__c</fullName>
    <description>This field was created for the Informatica Cloud integration for &quot;Contract ARR Report&quot; object</description>
    <formula>Contract__r.Term_in_Years__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Term in Years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>