force-app/main/default/objects/Asset__c/fields/Contract_Years_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Contract_Years_Remaining__c</fullName>
    <description>This field was created for the Informatica Cloud integration for &quot;Contract ARR Report&quot; object</description>
    <formula>Contract__r.Years_Remaining__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Years Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>