force-app/main/default/objects/Asset__c/fields/CTel_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>CTel_Contract_Number__c</fullName>
    <label>Order #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>