force-app/main/default/objects/Asset__c/fields/Dollars_Per_Truck__c.field-meta.xml
<CustomField>
    <fullName>Dollars_Per_Truck__c</fullName>
    <inlineHelpText>Sylectus only.</inlineHelpText>
    <label>$/Truck</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>