force-app/main/default/objects/Asset__c/fields/Eligible_for_Monthly_Report__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Monthly_Report__c</fullName>
    <description>This field was created for the Informatica Cloud integration for &quot;Contract ARR Report&quot; object</description>
    <formula>IF(NOT(ISPICKVAL(Contract__r.Term_Type__c , &quot;Perpetual&quot;)) &amp;&amp; ARR__c &gt; 0 &amp;&amp; OR(
ISPICKVAL(Contract__r.Status, &quot;Active&quot;),
ISPICKVAL(Contract__r.Status, &quot;Activated&quot;)
),&quot;Yes&quot;, &quot;No&quot;)</formula>
    <label>Eligible for Monthly Report</label>
    <type>Text</type>
</CustomField>