force-app/main/default/objects/Asset__c/fields/Eval__c.field-meta.xml
<CustomField>
    <fullName>Eval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eval</label>
    <type>Checkbox</type>
</CustomField>