force-app/main/default/objects/Asset__c/fields/Extra_DCs__c.field-meta.xml
<CustomField>
    <fullName>Extra_DCs__c</fullName>
    <inlineHelpText>Number of DCs paid for over and above those included in the list price</inlineHelpText>
    <label>Extra DCs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>