force-app/main/default/objects/Asset__c/fields/Extra_Users__c.field-meta.xml
<CustomField>
    <fullName>Extra_Users__c</fullName>
    <inlineHelpText>Number of Users paid for over and above those included in the list price</inlineHelpText>
    <label>Extra Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>