force-app/main/default/objects/Asset__c/fields/Fee_Increase_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Fee_Increase_Contact_Email__c</fullName>
    <formula>Account__r.Fee_Increase_Contact_del__r.Email</formula>
    <label>Fee Increase Contact Email</label>
    <type>Text</type>
</CustomField>