force-app/main/default/objects/Asset__c/fields/Finance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Finance_Notes__c</fullName>
    <label>Finance Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>