force-app/main/default/objects/Asset__c/fields/Fulfilled_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_Licenses__c</fullName>
    <inlineHelpText>Sum of Quantity from Fulfillment Events</inlineHelpText>
    <label>Fulfilled Licenses</label>
    <summarizedField>Fulfillment_Event__c.License_Metric_Quantity__c</summarizedField>
    <summaryForeignKey>Fulfillment_Event__c.Asset__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>