force-app/main/default/objects/Asset__c/fields/History_Billing_Detail_Name__c.field-meta.xml
<CustomField>
    <fullName>History_Billing_Detail_Name__c</fullName>
    <label>History_Billing_Detail_Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>