force-app/main/default/objects/Asset__c/fields/History_LinteItem_Name__c.field-meta.xml
<CustomField>
    <fullName>History_LinteItem_Name__c</fullName>
    <description>Historical data capture. Can be deleted after data migration validation.</description>
    <label>History LinteItem Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>