force-app/main/default/objects/Asset__c/fields/Last_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Bill_Date__c</fullName>
    <label>Last Bill Date</label>
    <type>Date</type>
</CustomField>