force-app/main/default/objects/Asset__c/fields/Legacy_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Source_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Source ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>