force-app/main/default/objects/Asset__c/fields/License_Metric_Qty__c.field-meta.xml
<CustomField>
    <fullName>License_Metric_Qty__c</fullName>
    <label>X-License Metric Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>