force-app/main/default/objects/Asset__c/fields/License_Metric_Quantity__c.field-meta.xml
<CustomField>
    <fullName>License_Metric_Quantity__c</fullName>
    <inlineHelpText>Quantity of licenses purchased at the time of contract.</inlineHelpText>
    <label>Contracted Licenses</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>