force-app/main/default/objects/Asset__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <formula>TEXT ( Product__r.License_Type__c )</formula>
    <label>License Type</label>
    <type>Text</type>
</CustomField>