force-app/main/default/objects/Asset__c/fields/Licensed_DCs__c.field-meta.xml
<CustomField>
    <fullName>Licensed_DCs__c</fullName>
    <formula>Number_of_DCs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Licensed DCs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>