force-app/main/default/objects/Asset__c/fields/Licensed_Users__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Users__c</fullName>
    <formula>Number_of_Users__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Licensed Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>