force-app/main/default/objects/Asset__c/fields/LTC_ARR__c.field-meta.xml
<CustomField>
    <fullName>LTC_ARR__c</fullName>
    <description>This field was created for the Informatica Cloud integration for &quot;Contract ARR Report&quot; object</description>
    <formula>IF(Contract__r.Long_Term_Contract__c = 1,  ARR__c, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LTC ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>