force-app/main/default/objects/Asset__c/fields/Maintenance_Status__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Status__c</fullName>
    <label>Maintenance Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>On Maintenance</fullName>
            </value>
            <value>
                <fullName>Off Maintenance</fullName>
            </value>
            <value>
                <fullName>Decommissioned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>