force-app/main/default/objects/Asset__c/fields/Map_Notes__c.field-meta.xml
<CustomField>
    <fullName>Map_Notes__c</fullName>
    <label>Map Notes</label>
    <type>TextArea</type>
</CustomField>