force-app/main/default/objects/Asset__c/fields/MIBOS_Migration_BatchName__c.field-meta.xml
<CustomField>
    <fullName>MIBOS_Migration_BatchName__c</fullName>
    <label>MIBOS Migration BatchName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>