force-app/main/default/objects/Asset__c/fields/Negotiation_Type__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Type__c</fullName>
    <description>Specific to Omni Mexico. Used to drive CPQ discount approvals.</description>
    <inlineHelpText>Specific to Omni Mexico. Used to drive CPQ discount approvals.</inlineHelpText>
    <label>Negotiation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>