force-app/main/default/objects/Asset__c/fields/Number_of_DCs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_DCs__c</fullName>
    <inlineHelpText>Number of distribution centers (Roadnet only).</inlineHelpText>
    <label># of DCs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>