force-app/main/default/objects/Asset__c/fields/Number_of_Instances__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Instances__c</fullName>
    <inlineHelpText>Roadnet only.</inlineHelpText>
    <label># Instances</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>