force-app/main/default/objects/Asset__c/fields/Number_of_Multi_Shift_Routes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Multi_Shift_Routes__c</fullName>
    <inlineHelpText>Used by Roadnet only.</inlineHelpText>
    <label># Multi Shift Routes</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>