force-app/main/default/objects/Asset__c/fields/Number_of_Users__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Users__c</fullName>
    <inlineHelpText>Number of users included with licenses. (Roadnet only)</inlineHelpText>
    <label># of Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>