force-app/main/default/objects/Asset__c/fields/Number_of_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Vehicles__c</fullName>
    <formula>IF
(
	License_Metric__c == &quot;Vehicles&quot;,
	License_Metric_Quantity__c -  ( IF (ISNULL(Number_of_Mobile_Assets__c), 0, Number_of_Mobile_Assets__c) ),
	null
 )</formula>
    <inlineHelpText>Roadnet only.</inlineHelpText>
    <label># Vehicles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>