force-app/main/default/objects/Asset__c/fields/order_no__c.field-meta.xml
<CustomField>
    <fullName>order_no__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Added for Roadnet by Ravi</description>
    <label>Order Number</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Contracted Assets</relationshipLabel>
    <relationshipName>Contracted_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>