force-app/main/default/objects/Asset__c/fields/Previous_Annual_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Previous_Annual_Maintenance__c</fullName>
    <label>Previous Annual Maintenance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>