force-app/main/default/objects/Asset__c/fields/Previous_Metric_Qty__c.field-meta.xml
<CustomField>
    <fullName>Previous_Metric_Qty__c</fullName>
    <label>Previous Metric Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>