force-app/main/default/objects/Asset__c/fields/Primary_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Primary_Business_Unit__c</fullName>
    <label>Primary Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Omnitracs Domestic</fullName>
            </value>
            <value>
                <fullName>Omnitracs Mexico</fullName>
            </value>
            <value>
                <fullName>Roadnet</fullName>
            </value>
            <value>
                <fullName>Sylectus</fullName>
            </value>
            <value>
                <fullName>XRS Corporation</fullName>
            </value>
            <value>
                <fullName>Turnpike Global Technologies Inc.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>