force-app/main/default/objects/Asset__c/fields/Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Status__c</fullName>
    <description>This is needed for Contracts Team</description>
    <formula>IMAGE(
IF(Product__r.IsActive = TRUE, &quot;/img/samples/flag_green.gif&quot;,
&quot;/img/samples/flag_red.gif&quot;),
&quot;Status Flag&quot;)</formula>
    <inlineHelpText>Displays the status of the Product in Salesforce:
Green Flag = Product is active
Red Flag = Product is not active (cannot be selected going forward)</inlineHelpText>
    <label>Product Status</label>
    <type>Text</type>
</CustomField>