force-app/main/default/objects/Asset__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <formula>TEXT ( Product__r.Product_Type__c )</formula>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>