force-app/main/default/objects/Asset__c/fields/Recurring_Maintenance_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Maintenance_Product_Id__c</fullName>
    <formula>Product__r.Recurring_Maintenance__r.Id</formula>
    <label>Recurring Maintenance Product Id</label>
    <type>Text</type>
</CustomField>