force-app/main/default/objects/Asset__c/fields/Recurring_Year_Maintenance_SKU__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Year_Maintenance_SKU__c</fullName>
    <formula>Product__r.Recurring_Maintenance__r.ProductCode</formula>
    <label>Recurring Year Maintenance SKU</label>
    <type>Text</type>
</CustomField>