force-app/main/default/objects/Asset__c/fields/RN_Linteitem_id__c.field-meta.xml
<CustomField>
    <fullName>RN_Linteitem_id__c</fullName>
    <description>Line Item Id from Roadnet system. Used for migration of fullfillment event</description>
    <label>RN_Linteitem_id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>