force-app/main/default/objects/Asset__c/fields/Show_as_Separate_Line__c.field-meta.xml
<CustomField>
    <fullName>Show_as_Separate_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show as Separate Line</label>
    <type>Checkbox</type>
</CustomField>