force-app/main/default/objects/Asset__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <description>Setting value to custom Product Code field not the standard one</description>
    <formula>Product__r.ProductCode</formula>
    <label>SKU</label>
    <type>Text</type>
</CustomField>