force-app/main/default/objects/Asset__c/fields/Sold_Price__c.field-meta.xml
<CustomField>
    <fullName>Sold_Price__c</fullName>
    <inlineHelpText>The price sold (primarily for perpetual products).</inlineHelpText>
    <label>Sold Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>