force-app/main/default/objects/Asset__c/fields/Stated_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Stated_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stated Renewal</label>
    <type>Checkbox</type>
</CustomField>