force-app/main/default/objects/Asset__c/fields/Unit_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Sales_Price__c</fullName>
    <description>The annual per unit sales price used in CPQ for extensions and renewals.</description>
    <inlineHelpText>The annual per unit sales price used in CPQ for extensions and renewals.</inlineHelpText>
    <label>Annual Unit Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>