force-app/main/default/objects/Asset__c/fields/Unit_Sales_Price_new__c.field-meta.xml
<CustomField>
    <fullName>Unit_Sales_Price_new__c</fullName>
    <formula>IF( Bundle_Product__c != null, Unit_Sales_Price__c , ARR__c/License_Metric_Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Unit Price of ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>