force-app/main/default/objects/Asset__c/fields/X_Contract_Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>X_Contract_Term_End_Date__c</fullName>
    <label>X-Contract Term End Date</label>
    <type>Date</type>
</CustomField>