force-app/main/default/objects/Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Bundle_Name__c</columns>
    <columns>Bundle_Product__c</columns>
    <columns>Product__c</columns>
    <columns>License_Metric_Quantity__c</columns>
    <columns>Contract__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>