force-app/main/default/objects/Asset__c/listViews/Roadnet_Assets.listView-meta.xml
<ListView>
    <fullName>Roadnet_Assets</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Asset_Term_Start_Date__c</columns>
    <columns>Asset_Term_End_Date__c</columns>
    <columns>ARR__c</columns>
    <columns>License_Metric_Quantity__c</columns>
    <columns>Fulfilled_Licenses__c</columns>
    <columns>History_LinteItem_Name__c</columns>
    <columns>History_Billing_Detail_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>Roadnet</value>
    </filters>
    <label>Roadnet Assets</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>